<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hex_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".InputHex">
    <!--Left Components -->
    <TextView
        android:id="@+id/tvDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="#3CAEABAB"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/Hexadecimal"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvBinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#3CAEABAB"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/Decimal"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvDecimal"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvOctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#3CAEABAB"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/Octal"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvBinary"
        tools:visibility="visible" />

    <!--Right Components -->


    <TextView
        android:id="@+id/tvHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#3CAEABAB"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/Binary"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvOctal" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autofillHints=""
        android:digits="@string/HexChars"
        android:ems="10"
        android:hint="@string/etInput"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:minHeight="48dp"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/tvDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/tvDecimal"
        app:layout_constraintTop_toTopOf="@+id/tvDecimal"
        app:layout_constraintVertical_bias="0.842" />

    <TextView
        android:id="@+id/tvBinaryOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#367FEB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvHex"
        app:layout_constraintStart_toEndOf="@+id/tvHex"
        app:layout_constraintTop_toTopOf="@+id/tvHex" />

    <TextView
        android:id="@+id/tvDecimalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#154C9E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvBinary"
        app:layout_constraintStart_toEndOf="@+id/tvBinary"
        app:layout_constraintTop_toTopOf="@+id/tvBinary" />

    <TextView
        android:id="@+id/tvOctalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#EB5D4B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvOctal"
        app:layout_constraintStart_toEndOf="@+id/tvOctal"
        app:layout_constraintTop_toTopOf="@+id/tvOctal" />
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHex"
        app:layout_constraintVertical_bias="0.201">

        <Button
            android:id="@+id/btnBinary"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:minHeight="48dp"
            android:text="@string/Decimal"
            android:textColor="@color/white"
            app:rippleColor="#3F51B5"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnOctal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/Octal"
            android:textColor="@color/white"
            app:rippleColor="@color/purple_700"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnHex"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:text="@string/Binary"
            android:textColor="@color/white"
            app:rippleColor="#FF5722"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvInputType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="#4A7B7F81"
        android:text="@string/Change"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvHex"
        app:layout_constraintVertical_bias="1.0" />
    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#33575553"
        android:orientation="horizontal"
        android:padding="5dp"
        app:circularflow_radiusInDP="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout">

        <TextView
            android:id="@+id/tvCurrInputType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="#3E2196F3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/inputType"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="#00BCD4"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/Hexadecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>