<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">


    <!--Left Components -->
    <TextView
        android:id="@+id/tvDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Decimal"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvHex"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvBinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Binary"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvHex"
        app:layout_constraintTop_toBottomOf="@+id/tvDecimal"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvOctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Octal"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tvHex"
        app:layout_constraintTop_toBottomOf="@+id/tvBinary"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Hexadecimal"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOctal" />

    <!--Right Components -->

    <EditText
        android:id="@+id/etInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autofillHints=""
        android:background="@drawable/footer_rounded"
        android:backgroundTint="#1A673AB7"
        android:ems="10"
        android:hint="@string/etInput"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toBottomOf="@+id/tvDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/tvDecimal"
        app:layout_constraintTop_toTopOf="@+id/tvDecimal"
        app:layout_constraintVertical_bias="0.842" />

    <TextView
        android:id="@+id/tvDecimalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/footer_rounded"
        android:backgroundTint="#262196F3"
        android:textColor="#154C9E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvBinary"
        app:layout_constraintStart_toEndOf="@+id/tvBinary"
        app:layout_constraintTop_toTopOf="@+id/tvBinary" />

    <TextView
        android:id="@+id/tvOctalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/footer_rounded"
        android:backgroundTint="#26009688"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvOctal"
        app:layout_constraintStart_toEndOf="@+id/tvOctal"
        app:layout_constraintTop_toTopOf="@+id/tvOctal" />

    <TextView
        android:id="@+id/tvBinaryOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/footer_rounded"
        android:backgroundTint="#26FF9800"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvHex"
        app:layout_constraintStart_toEndOf="@+id/tvHex"
        app:layout_constraintTop_toTopOf="@+id/tvHex" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHex"
        app:layout_constraintVertical_bias="0.201">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnBinary"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/Binary"
            android:textColor="@color/white"
            app:neumorph_backgroundColor="#882196F3"
            app:neumorph_shadowColorDark="#4D2196F3"
            app:neumorph_shadowColorLight="#1A2196F3"
            app:neumorph_shapeType="flat"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnOctal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:text="@string/Octal"
            android:textColor="@color/white"
            app:neumorph_backgroundColor="#87009688"
            app:neumorph_shadowColorDark="#4D009688"
            app:neumorph_shadowColorLight="#1A009688"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnHex"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/Hexadecimal"
            android:textColor="@color/white"
            app:neumorph_backgroundColor="#99FF9800"
            app:neumorph_shadowColorDark="#4DFF9800"
            app:neumorph_shadowColorLight="#1AFF9800" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInputType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/Change"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvHex"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        android:padding="5dp"
        app:circularflow_radiusInDP="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout">

        <TextView
            android:id="@+id/tvCurrInputType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/footer_rounded"
            android:backgroundTint="#3E2196F3"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/inputType"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/footer_rounded"
            android:backgroundTint="#B3673AB7"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Decimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>